--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,46 @@
-.App {
-  text-align: center;
+
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
+.headerTitle {
+  width: calc(100vw - 505px);
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 20px;
+  height: 325px;
+}
+
+@media (max-width: 750px) {
+  .header {
+    flex-direction: column;
+  }
+
+  .headerTitle {
+    width: calc(100% - 40px);
+    height: 200px;
+  }
+}
+
+.logo {
+  padding: 20px;
+  display: inline-block;
+  max-width: 425px;
+  width: 100%;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .logo {
+    animation: App-logo-spin infinite 10s linear;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
@@ -34,5 +48,195 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+
+.marqueeBorders {
+  border-left: 5px solid;
+  border-right: 5px solid;
+  margin-bottom: 5px;
+}
+.marquee {
+  overflow: hidden;
+  display: inline-block;
+  max-width: 100%;
+  box-sizing: border-box;
+}
+
+.marqueeInner {
+  animation: marquee 5s linear infinite;
+  display: inline-flex;
+  transform: translate3d(-50%, 0, 0);
+}
+
+.marqueeInnerReverse {
+  animation: marqueeReverse 5s linear infinite;
+  display: inline-flex;
+}
+
+
+.rmName {
+  white-space: nowrap;
+  padding: 5px;
+  padding-right: 40px;
+  font-size: 40px;
+  font-weight: 1;
+}
+h1.rmName {
+  font-size: 70px
+}
+h2.rmName {
+  font-size: 30px;
+}
+h3.rmName {
+  font-size: 14px;
+}
+
+
+
+@media (max-width: 750px) {
+  h1.rmName {
+    font-size: 70px
+  }
+  h2.rmName {
+    font-size: 30px;
+  }
+  h3.rmName {
+    font-size: 14px;
+  }
+}
+
+.buyNow {
+  font-size: 30px;
+}
+
+.sale {
+  font-size: 60px;
+}
+@media (max-width: 750px) {
+  .sale {
+    font-size: 40px;
+  }
+}
+
+
+@keyframes marquee {
+  0% {
+      transform: translate3d(-10%, 0, 0);
+  }
+
+  100% {
+      transform: translate3d(0%, 0, 0);
+  }
+}
+
+@keyframes marqueeReverse {
+  0% {
+      transform: translate3d(0%, 0, 0);
+  }
+
+  100% {
+      transform: translate3d(-10%, 0, 0);
+  }
+}
+
+
+.blink {
+  display: inline-block;
+  animation: fade 1s ease-in-out infinite;
+}
+
+@keyframes fade {
+  0%,100% { opacity: 0 }
+  50% { opacity: 1 }
+}
+
+.growShrink {
+  display: inline-block;
+  animation: growShrink 2s ease-in-out infinite
+}
+
+@keyframes growShrink {
+  0% {transform: scale(1);}
+  50% { transform: scale(0.25);}
+  100% { transform: scale(1);}
+}
+
+.spaceAround {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  margin: 20px;
+}
+
+.content img {
+  width: 100%;
+}
+
+.section {
+  overflow: hidden;
+  border: 5px solid;
+  box-sizing: border-box;
+  max-width: 600px;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 750px) {
+  .content {
+    flex-direction: column;
+  }
+  .section {
+    width: 100%;
+  }
+}
+
+.tilt {
+  height: 0;
+  width: 650px;
+  position: relative;
+  left: -125px;
+  top: 140px;
+  transform: rotate(-45deg);
+  text-shadow: 3px 3px 5px;
+}
+
+.sectionTitle {
+  padding-right: 20px;
+  font-size: 50px;
+}
+
+.rotateZContainer {
+  position: relative;
+  float: left;
+  width: 100%;
+  display: flex;
+  height: 0;
+
+  top: 80px;
+  align-items: center;
+  justify-content: center;
+}
+.rotateZ {
+  animation: rotateZ 1.5s ease-in-out infinite
+}
+
+@keyframes rotateZ {
+  0% {
+    transform: perspective(500px) rotate3d(0,2,0, -45deg) translateZ(50px);
+  }
+  50% {
+    transform: perspective(500px) rotate3d(0,2,0, 45deg) translateZ(50px);
+    perspective: 200px;
+  }
+  100% {
+    transform: perspective(500px) rotate3d(0,2,0, -45deg) translateZ(50px);
   }
 }
