--- a/src/Patriot.css
+++ b/src/Patriot.css
@@ -47,3 +47,43 @@
     background-position: 100%;
   }
 }
+
+
+.borderRed {
+  border-color: #b22234;
+}
+.borderBlue {
+  border-color: #3C3B6E;
+
+}
+
+.borderWhite {
+  border-color: #FFFFFF;
+}
+
+.patriotContent {
+  margin-top: 20px;
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: 300px 300px 300px 300px;
+}
+
+@media (max-width: 1260px) {
+  .patriotContent {
+    grid-template-columns: 300px 300px 300px;
+    grid-column-gap: 10px;
+  }
+}
+
+@media (max-width: 965px) {
+  .patriotContent {
+    grid-template-columns: 300px 300px;
+    grid-column-gap: 60px;
+  }
+}
+
+@media (max-width: 700px) {
+  .patriotContent {
+    grid-template-columns: 100%;
+  }
+}
