--- a/src/Bargain.css
+++ b/src/Bargain.css
@@ -11,3 +11,48 @@
 .backAndForth * {
   transform: translateX(0%);
 }
+
+.spin {
+  animation: spin 4s linear infinite;
+}
+
+@keyframes spin {
+  0%, 100% { transform: rotate(-15deg); }
+  50% { transform: rotate(15deg); }
+}
+
+.bargainContent {
+  margin: auto;
+  margin-top: 20px;
+  display: grid;
+  grid-gap: 15px;
+  grid-template-columns: 308px 308px 308px;
+
+}
+
+@media (max-width: 965px) {
+  .bargainContent {
+    grid-template-columns: 308px 308px;
+    grid-column-gap: 60px;
+  }
+}
+
+@media (max-width: 700px) {
+  .bargainContent {
+    grid-template-columns: 308px;
+  }
+}
+
+.bargainGrowShrink {
+  animation: bargainGrowShrink 10s ease-in-out infinite
+}
+
+@keyframes bargainGrowShrink {
+  0% {transform: scale(0);}
+  40% {transform: scale(0);}
+  45% { transform: scale(1);}
+  50%, 60%, 70%, 80%, 90% { transform:  rotate(7deg);}
+  55%, 65%, 75%, 85% { transform:  rotate(-7deg);}
+  95% { transform: scale(1) rotate(0deg);}
+  100% { transform: scale(0);}
+}
