--- a/src/Safety.css
+++ b/src/Safety.css
@@ -58,3 +58,35 @@
     font-size: 45px;
   }
 }
+
+.safetyContent {
+  margin: auto;
+  margin-top: 20px;
+  display: grid;
+  grid-gap: 15px;
+  grid-template-columns: 308px 308px 308px;
+
+}
+
+@media (max-width: 965px) {
+  .safetyContent {
+    grid-template-columns: 308px 308px;
+    grid-column-gap: 60px;
+  }
+}
+
+@media (max-width: 700px) {
+  .safetyContent {
+    grid-template-columns: 308px;
+  }
+}
+
+.safetyContentBlink {
+  animation: safetyContentBlink 3s ease-in-out infinite;
+}
+
+@keyframes safetyContentBlink {
+  0%,100% { opacity: 1 }
+  12.5% { opacity: 0 }
+  25% { opacity: 1 }
+}
