hook more shit up

--- a/src/Branded.css
+++ b/src/Branded.css
@@ -281,7 +281,7 @@
 }
 
 .brandedItemFeature {
-  animation: hueRotate 3s linear infinite;
+  /*animation: hueRotate 3s linear infinite;*/
 }
 
 .brandedItemFeature:hover {
