--- a/src/Patriot.css
+++ b/src/Patriot.css
@@ -65,12 +65,11 @@
   margin-top: 20px;
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: 300px 300px 300px 300px;
+  grid-template-columns: 33% 33% 33% ;
 }
 
 @media (max-width: 1260px) {
   .patriotContent {
-    grid-template-columns: 300px 300px 300px;
     grid-column-gap: 10px;
   }
 }
