--- a/src/Main.css
+++ b/src/Main.css
@@ -691,6 +691,10 @@ h4.rmName {
   box-sizing: border-box;
 }
 
+.itemFeature:hover * {
+  opacity: 0.90;
+}
+
 
 .itemFeature img {
   width: 300px;
