--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/*@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');*/
+
 body {
   font-family: 'Roboto', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -5,6 +7,9 @@ body {
   /*color: white;
   background-color: #222;
   border-color: #fff;*/
+}
+p {
+  /*font-family: 'Roboto Slab', 'Helvetica Neue', sans-serif;*/
 }
 
 html, body, div, span, applet, object, iframe,
