modify images, links

--- a/src/Main.css
+++ b/src/Main.css
@@ -86,8 +86,8 @@ a {
 
   }
   .logo {
-    max-height: 250px;
-    max-width: 250px;
+    /*max-height: 250px;*/
+    /*max-width: 250px;*/
     /*margin: auto;*/
   }
 }
