--- a/src/Patriot.css
+++ b/src/Patriot.css
@@ -1,10 +1,10 @@
 
 .patriotBackground {
   position: fixed;
-  top: 0;
+  top: -50px;
   left: 0;
   z-index: -100;
-  height: 100vh;
+  height: calc(100vh + 50px);
   width: 100vw;
   overflow: hidden;
 }
